tests/NormalTests/paczka1/fuzzy1/65798701.err
Error in line 3: fq9S5XRfg A961 23,3
Error in line 8: TBC A961 2,5
Error in line 10: TBC S902 172,2
Error in line 18: xrn5iDrEQMi A91 65,5
Error in line 11: fB4kEP S902 24,2
Error in line 20: xrn5iDrEQMi S902 82,7
Error in line 16: TBC A91 138,1
Error in line 30: Ectfm S570 29,2
Error in line 27: A91 S570 82,3
